# Drone_new_method

./: .gitignore  CONTEXT.md  README.md  cursor_guide_mcp_skills.md  errors.md  errors_phaseB.md  result.md  start_gazebo.md  tasks.md
.cursor/rules/: general.mdc  global_venv.mdc  ros2_conventions.mdc  safety_rules.mdc
config/: drone_params.yaml  nav2_params.yaml  slam_params.yaml
rosbags/b3_tuning_test/: b3_tuning_test_0.db3
rosbags/b3_tuning_test2/: b3_tuning_test2_0.db3
rosbags/b3_tuning_test3/: b3_tuning_test3_0.db3
scripts/: arm_and_takeoff.py  check_preflight.py  compute_lateral_error_rms.py  follow_drone.sh  free_camera.sh  generate_barcodes.py  launch_sim.sh  offboard_takeoff_via_twist_mux.py  run_takeoff.sh  start_gazebo.sh  start_px4.sh  test_import.py  test_px4_sub.py  update_sdf_barcodes.py
simulation/models/barcodes/: model.config  model.sdf
simulation/models/x500_warehouse/: model.config  model.sdf
simulation/worlds/: warehouse_phase0.sdf
src/bringup/drone_bringup/: CMakeLists.txt  package.xml
src/bringup/drone_bringup/launch/: loop2.launch.py
src/control/px4_bridge/: CMakeLists.txt  package.xml
src/control/px4_bridge/config/: px4_bridge_params.yaml
src/control/px4_bridge/include/px4_bridge/: px4_bridge_node.hpp
src/control/px4_bridge/launch/: px4_bridge.launch.py
src/control/px4_bridge/src/: px4_bridge_node.cpp
src/control/rack_follower/: CMakeLists.txt  package.xml
src/control/rack_follower/config/: rack_follower_params.yaml
src/control/rack_follower/include/rack_follower/: rack_follower_node.hpp
src/control/rack_follower/launch/: rack_follower.launch.py
src/control/rack_follower/src/: rack_follower_node.cpp
src/control/twist_mux_config/: CMakeLists.txt  package.xml
src/control/twist_mux_config/config/: twist_mux.yaml
src/control/twist_mux_config/launch/: twist_mux.launch.py
src/navigation/mission_manager/: CMakeLists.txt  package.xml
src/navigation/nav2_config/: CMakeLists.txt  package.xml
src/navigation/nav2_config/config/: nav2_params.yaml
src/perception/apriltag_detector/: CMakeLists.txt  package.xml
src/perception/apriltag_detector/config/: apriltag_detector_params.yaml
src/perception/barcode_scanner/: CMakeLists.txt  package.xml
src/perception/barcode_scanner/barcode_scanner/: slot_kpi.py
src/perception/barcode_scanner/config/: barcode_scanner_params.yaml
src/perception/barcode_scanner/include/barcode_scanner/: barcode_scanner_node.hpp
src/perception/barcode_scanner/launch/: barcode_scanner.launch.py
src/perception/barcode_scanner/scripts/: scan_policy_fsm.py
src/perception/barcode_scanner/src/: barcode_scanner_node.cpp
src/perception/lidar_preprocessor/: CMakeLists.txt  package.xml
src/perception/lidar_preprocessor/config/: lidar_preprocessor_params.yaml
src/perception/lidar_preprocessor/include/lidar_preprocessor/: lidar_preprocessor_node.hpp
src/perception/lidar_preprocessor/launch/: lidar_preprocessor.launch.py
src/perception/lidar_preprocessor/src/: lidar_preprocessor_node.cpp
src/slam/fast_lio2_wrapper/: CMakeLists.txt  package.xml
src/telemetry/kpi_recorder/: CMakeLists.txt  package.xml
src/telemetry/kpi_recorder/kpi_recorder/: __init__.py  kpi_recorder_node.py
